Update website with new design

--- a/6-reasons-to-use-shopify.html
+++ b/6-reasons-to-use-shopify.html
@@ -45,7 +45,7 @@ permalink: /6-reasons-to-use-shopify/
         <meta name="twitter:data2" content="10 minutes">
         <meta name="google-site-verification" content="4CQdjA8VuHHdJlLAeL33JXUNCcg92x6Yy2MK2H-F5rs" />
         <link rel="canonical" href="https://sybiltec.com/6-reasons-to-use-shopify/" />
-        <link rel="stylesheet" href="https://sybiltec.com/styles.min.css" type="text/css">
+        <link rel="stylesheet" href="https://sybiltec.com/styles.css" type="text/css">
         <link rel="icon" type="image/png" href="https://sybiltec.com/favicon.png">
         <!-- MailerLite Universal -->
         <script>
@@ -61,39 +61,42 @@ permalink: /6-reasons-to-use-shopify/
     </head>
     <body>
         <div class="header">
-            <div class="container-1000">
-                <div class="logo">
-                    <a href="/"><img src="https://sybiltec.com/images/logos/sybiltech-logo-small.jpg" alt="Sybiltech logo"></a>
-                </div>
-            </div>
-        </div>
-        <div class="nav">
-            <div class="container-1000 center">
-                <div class="topnav" id="myTopnav">
-                    <a href="/">Home</a>                    
-                    <a href="https://sybiltec.com/services">Services</a>
-                    <a href="https://sybiltec.com/clients">Clients</a>
-                    <a href="https://sybiltec.com/design">Design</a>
-                    <a href="https://sybiltec.com/about">About Me</a>
-                    <a href="https://sybiltec.com/projects">Projects</a>   
-                    <a href="https://sybiltec.com/faqs">FAQs</a>
-                    <a href="https://sybiltec.com/blog">Blog</a>
-                    <a href="https://us5.list-manage.com/contact-form?u=0faa041c3b4e79909716dd256&form_id=e1c8f76dbb1507fc5caa25324e7047dd" target="_blank">Contact</a>
-                    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-                        <i class="fa fa-bars"></i>
-                    </a>
+                <div class="container-1140">
+                    <div class="row">
+                        <div class="col-2">
+                            <div class="logo">
+                                <a href="/"><img src="https://sybiltec.com/images/logos/sybiltec-logo-small.png" alt="Sybiltec"></a>
+                            </div>
+                        </div>
+                        <div class="col-10">
+                            <div class="nav">
+                                    <div class="topnav" id="myTopnav">
+                                        <a href="https://sybiltec.com/services">Services</a>
+                                        <a href="https://sybiltec.com/clients">Clients</a>
+                                        <a href="https://sybiltec.com/design">Design</a>
+                                        <a href="https://sybiltec.com/about">About Me</a>
+                                        <a href="https://sybiltec.com/projects">Projects</a>   
+                                        <a href="https://sybiltec.com/faqs">FAQs</a>
+                                        <a href="https://sybiltec.com/blog">Blog</a>
+                                        <a href="https://us5.list-manage.com/contact-form?u=0faa041c3b4e79909716dd256&form_id=e1c8f76dbb1507fc5caa25324e7047dd" target="_blank">Contact</a>
+                                        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                                            <i class="fas fa-bars"></i>
+                                        </a>
+                                    </div>
+                            </div>
+                        </div>
                 </div>
             </div>
         </div>
         <div class="hero center">
-            <div class="container-1000">
+            <div class="container-1140">
                 <h1>6 Reasons Why You Should Be Using Shopify</h1>
                 <h4></h4>
                 
             </div>
         </div>
         <div class="main section">
-            <div class="container-1000">
+            <div class="container-1140">
                 <p>Are you planning to sell your products or services online? Consider choosing 
                     <a href="https://shopify.co.uk" target="_blank" rel="noopener noreferrer">
                         Shopify</a>, one of the most popular e-commerce platforms. Here I present to 
@@ -108,12 +111,12 @@ permalink: /6-reasons-to-use-shopify/
                     store. Use the customiser to easily edit the design, for example, adding 
                     images to a slideshow or changing fonts. Shopify gives you full access* 
                     to the theme files, so you can make further customisations by editing the 
-                    code directly. If you don’t have coding skills, however, hire an <a href="/">expert</a> 
+                    code directly. If you don't have coding skills, however, hire an <a href="/">expert</a> 
                     to do the job for you.</p>
 
                 <h2>Shopify App Store</h2>
                 <p>Shopify offers many tools to help you get started straight out of the box. 
-                    However, there are many reasons why you’d want to extend the functionality 
+                    However, there are many reasons why you'd want to extend the functionality 
                     of your store. You may want to integrate your store with an ESP (email 
                     ervice provider). Or, you might need to translate your store into foreign 
                     languages. Fortunately, the <a href="https://apps.shopify.com/" target="_blank" 
@@ -127,21 +130,21 @@ permalink: /6-reasons-to-use-shopify/
                 <p>Search engine optimisation is the practice of tuning your website so that it 
                     ranks well in search results, increasing the chances of it being found through 
                     search. Shopify provides you with all of the essential tools for improving 
-                    your store’s SEO. You are able to set page titles and meta descriptions, 
+                    your store's SEO. You are able to set page titles and meta descriptions, 
                     alt tags for images, and create URL redirects. There is also a blogging 
                     feature, helping you keep your site updated with fresh content to entice 
                     your customers with. Plus, the online store speed report gives you insights 
                     and tips on how to improve its performance.</p>
 
                 <h2>A Range of Plans Available</h2>
-                <p>Shopify offers a variety of plans, so you’re sure to find pricing that suits 
+                <p>Shopify offers a variety of plans, so you're sure to find pricing that suits 
                     your needs. I recommend beginning with the Basic plan, which costs just 
                     $29/month. You can upgrade or downgrade at any time if your current plan 
-                    isn’t suitable for you. These are some of the benefits you can enjoy with all 
+                    isn't suitable for you. These are some of the benefits you can enjoy with all 
                     plans:</p>
 
                 <ul>
-                    <li>A free SSL certificate that doesn’t expire</li>
+                    <li>A free SSL certificate that doesn't expire</li>
                     <li>Connect your custom domain</li>
                     <li>Staff accounts</li>
                     <li>Low online credit card rates</li>
@@ -161,19 +164,19 @@ permalink: /6-reasons-to-use-shopify/
                         noreferrer">Shopify Lite</a>, for selling on WordPress and other platforms.</li>
                 </ul>
 
-                <h2>Try it Free for 14 Days</h2>
-                <p>Before making any commitments, why not make use of Shopify’s trial period. 
-                    After providing a few details about your business, you’ll have access to a 
+                <h2>Try it Free for 3 Days</h2>
+                <p>Before making any commitments, why not make use of Shopify's trial period? 
+                    After providing a few details about your business, you'll have access to a 
                     trial store where you can try out most of the available features. Make the 
                     most of your trial period to explore everything that Shopify has to offer, 
                     check out their support team, and experiment with different apps and themes. 
                     If Shopify is not the right solution for you, simply cancel your trial within 
-                    14 days and you won’t be charged.</p>
+                    3 days and you won't be charged.</p>
 
                 <h2>Responsive Support Team</h2>
                 <p>The support team is available to contact 24/7 by email, Twitter or chat. There 
                     is also a community forum where you can get answers from Experts and other 
-                    Shopify merchants. You don’t need to have a Shopify store to gain access to 
+                    Shopify merchants. You don't need to have a Shopify store to gain access to 
                     support.</p>
 
                 <h2>Selling in Multiple Currencies</h2>
@@ -183,27 +186,26 @@ permalink: /6-reasons-to-use-shopify/
                     the best language and currency for the customer, based on their location. At 
                     the time of publishing this blog, 133 currencies are supported.</p>
 
-                <p><em>Check out the new video course, <a href="https://sybiltec.com/building-business-shopify">
-                    Building a Business with Shopify 2020/21</a>, 
-                    produced in partnership with <a href="https://cntassociates.com" target="_blank" 
-                    rel="noopener noreferrer">CNT Associates</a>.</em></p>
-
-                <div class="padding-bottom padding-top center">
-                    <a class="btn-primary" href="https://sybiltec.com/building-business-shopify">View Course</a>
-                </div>
                 <p>* Access to the checkout theme file is only available with Shopify Plus.</p>
             </div>
         </div>
         <div class="contact section">
-                    <h3>Would You Like To Start A Project With Me?</h3>
-                    <p class="padding-bottom">Please click the contact button to get in touch with me about your requirements. 
-                            I look forward to hearing more about your exciting project.</p>
-                    <div class="center padding-bottom"><a class="btn-contact" href="https://us5.list-manage.com/contact-form?u=0faa041c3b4e79909716dd256&form_id=e1c8f76dbb1507fc5caa25324e7047dd" target="_blank">Contact Me</a></div>
+            <div class="container-1140">
+                <div class="row">
+                    <div class="col-8">
+                        <h3>Would You Like To Start A Project With Me?</h3>
+                        <p>Click the contact button to get in touch with your requirements</p>
+                    </div>
+                    <div class="col-4">
+                        <a class="btn-primary" href="https://us5.list-manage.com/contact-form?u=0faa041c3b4e79909716dd256&form_id=e1c8f76dbb1507fc5caa25324e7047dd" target="_blank">Contact Me</a>
+                    </div>
+                </div>
+                </div>
         </div>
         <div class="footer section">
-            <div class="container-1200">
+            <div class="container-1140">
                 <div class="row">
-                    <div class="col-2">
+                    <div class="col-3">
                         <h4>Links</h4>
                         <p><a href="/">Home</a></p>
                         <p><a href="https://sybiltec.com/about">About</a></p>
@@ -212,14 +214,7 @@ permalink: /6-reasons-to-use-shopify/
                         <p><a href="https://sybiltec.com/terms-and-conditions">Terms and Conditions</a></p>
                         <p><a href="https://sybiltec.com/uploads/privacy-policy-v3.pdf" target="_blank">Privacy Policy</a></p>
                     </div>
-                    <div class="col-2">
-                        <h4>Services</h4>
-                        <p>Shopify Sites</p>
-                        <p>WordPress Sites</p>
-                        <p>Wix Sites</p>
-                        <p>Squarespace Sites</p>
-                    </div>
-                    <div class="col-4">
+                    <div class="col-5">
                         <div class="ml-form-embed"
                             data-account="2216689:x9i7o3w7n4"
                             data-form="5270027:e5c2j0">
@@ -230,20 +225,17 @@ permalink: /6-reasons-to-use-shopify/
                         <p>
                             <a href="https://us5.list-manage.com/contact-form?u=0faa041c3b4e79909716dd256&form_id=e1c8f76dbb1507fc5caa25324e7047dd" target="_blank"><i class="far fa-envelope"></i></a>
                             <a href="https://linkedin.com/in/sybil-m" target="_blank" rel="noopener noreferrer">
-                                <i class="fab fa-linkedin-in"></i></a>
+                                <i class="fa-brands fa-linkedin"></i></a>
                             <a href="https://twitter.com/sybiltec" target="_blank" rel="noopener noreferrer">
-                                <i class="fab fa-twitter"></i></a>
+                                <i class="fa-brands fa-twitter"></i></a>
                             <a href="https://instagram.com/sybiltec" target="_blank" rel="noopener noreferrer">
-                                <i class="fab fa-instagram"></i></a>
-                        </p>
-                        <p><a href="https://shopify.co.uk" target="_blank" rel="noopener noreferrer">
-                            <img src="https://sybiltec.com/images/logos/shopify-partners-logo.png" alt="Shopify Partners logo"></a></p>
-                        <p><a href="https://partnernetwork.ionos.co.uk/partner/sybiltec?origin=PartnerBadge" rel="nofollow">
-<img src="https://images-2.partnerportal.ionos.co.uk/items/8c52de7e-fd6b-485c-b6f7-57e5b4fc1bf7/profiles/526e8e05-108f-4693-a1dd-2b415e4d7a54/badges/normal_white" alt="IONOS - Official Partner">
-</a></p>                        
+                                <i class="fa-brands fa-instagram"></i></a>
+			                <a href="https://facebook.com/sybiltec" target="_blank" rel="noopener noreferrer">
+                                <i class="fa-brands fa-facebook"></i></a>
+                        </p>                       
                     </div>
                 </div>
-                <div class="logo"><img src="https://sybiltec.com/images/logos/sybiltech-logo-transparent.png" alt="Sybiltech logo">
+                <div class="logo"><img src="https://sybiltec.com/images/logos/sybiltec-logo-transparent.png" alt="Sybiltech logo">
                     <p class="center"><a href="#">Back to top</a></p>
             </div>
             </div>
