--- a/6-tips-for-surviving-remote-working.html
+++ b/6-tips-for-surviving-remote-working.html
@@ -46,7 +46,7 @@ permalink: /6-tips-for-surviving-remote-working/
         <meta name="twitter:data2" content="10 minutes">
         <meta name="google-site-verification" content="4CQdjA8VuHHdJlLAeL33JXUNCcg92x6Yy2MK2H-F5rs" />
         <link rel="canonical" href="https://sybiltec.com/6-tips-for-surviving-remote-working/" />
-        <link rel="stylesheet" href="https://sybiltec.com/styles.min.css" type="text/css">
+        <link rel="stylesheet" href="https://sybiltec.com/styles.css" type="text/css">
         <link rel="icon" type="image/png" href="https://sybiltec.com/favicon.png">
         <!-- MailerLite Universal -->
         <script>
@@ -62,38 +62,41 @@ permalink: /6-tips-for-surviving-remote-working/
     </head>
     <body>
         <div class="header">
-            <div class="container-1000">
-                <div class="logo">
-                    <a href="/"><img src="https://sybiltec.com/images/logos/sybiltech-logo-small.jpg" alt="Sybiltech logo"></a>
-                </div>
-            </div>
-        </div>
-        <div class="nav">
-            <div class="container-1000 center">
-                <div class="topnav" id="myTopnav">
-                    <a href="/">Home</a>                    
-                    <a href="https://sybiltec.com/services">Services</a>
-                    <a href="https://sybiltec.com/clients">Clients</a>
-                    <a href="https://sybiltec.com/design">Design</a>
-                    <a href="https://sybiltec.com/about">About Me</a>
-                    <a href="https://sybiltec.com/projects">Projects</a>   
-                    <a href="https://sybiltec.com/faqs">FAQs</a>
-                    <a href="https://sybiltec.com/blog">Blog</a>
-                    <a href="https://us5.list-manage.com/contact-form?u=0faa041c3b4e79909716dd256&form_id=e1c8f76dbb1507fc5caa25324e7047dd" target="_blank">Contact</a>
-                    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-                        <i class="fa fa-bars"></i>
-                    </a>
+                <div class="container-1140">
+                    <div class="row">
+                        <div class="col-2">
+                            <div class="logo">
+                                <a href="/"><img src="https://sybiltec.com/images/logos/sybiltec-logo-small.png" alt="Sybiltec"></a>
+                            </div>
+                        </div>
+                        <div class="col-10">
+                            <div class="nav">
+                                    <div class="topnav" id="myTopnav">
+                                        <a href="https://sybiltec.com/services">Services</a>
+                                        <a href="https://sybiltec.com/clients">Clients</a>
+                                        <a href="https://sybiltec.com/design">Design</a>
+                                        <a href="https://sybiltec.com/about">About Me</a>
+                                        <a href="https://sybiltec.com/projects">Projects</a>   
+                                        <a href="https://sybiltec.com/faqs">FAQs</a>
+                                        <a href="https://sybiltec.com/blog">Blog</a>
+                                        <a href="https://us5.list-manage.com/contact-form?u=0faa041c3b4e79909716dd256&form_id=e1c8f76dbb1507fc5caa25324e7047dd" target="_blank">Contact</a>
+                                        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                                            <i class="fas fa-bars"></i>
+                                        </a>
+                                    </div>
+                            </div>
+                        </div>
                 </div>
             </div>
         </div>
         <div class="hero center">
-            <div class="container-1000">
+            <div class="container-1140">
                 <h1>6 Tips for Surviving Remote Working</h1>
                 <h4></h4>    
             </div>
         </div>
         <div class="main section">
-            <div class="container-1000">
+            <div class="container-1140">
                 <p>Love it or loathe it, working remotely may not be for everyone but due to the current pandemic it's essential that work is carried out from home where possible. Read on to find out how you can WFH (work from home) more effectively.</p>
 
                 <h2>Optimise Your Technology</h2>
@@ -124,7 +127,7 @@ permalink: /6-tips-for-surviving-remote-working/
 
                 <p>Need to share large files? No more sending attachments via email! Create a document in <a href="https://drive.google.com" target="_blank" rel="noopener noreferrer">Google Drive</a> and send the shareable link to colleagues who require access.</p>
 
-                <p>There are many options available for video meetings. One of the most popular is <a href="https://zoom.us/" target="_blank" rel="noopener noreferrer">Zoom</a>: this offers free video calling for 40 minutes for up to 100 participants, or unlimited time for 1 to 1 meetings. Other well-known alternatives include <a href="https://www.microsoft.com/en-gb/microsoft-365/microsoft-teams/free" target="_blank" rel="noopener noreferrer">Microsoft Teams</a> and <a href="https://meet.google.com/" target="_blank" rel="noopener noreferrer">Google Meet</a>. These tools are also great for keeping in touch with friends and family. Just remember to change out of your pyjamas before making that video call.</p>
+                <p>There are many options available for video meetings. One of the most popular is <a href="https://zoom.us/" target="_blank" rel="noopener noreferrer">Zoom</a>, which offers free video calling for 40 minutes for up to 100 participants. Other well-known alternatives include <a href="https://www.microsoft.com/en-gb/microsoft-teams/free" target="_blank" rel="noopener noreferrer">Microsoft Teams</a> and <a href="https://meet.google.com/" target="_blank" rel="noopener noreferrer">Google Meet</a>. You may also want to try <a href="https://meet.jit.si/" target="_blank" rel="noopener noreferrer">Jitsi Meet</a>, which currently imposes no limitations on meeting length and no account is needed. These tools are also great for keeping in touch with friends and family. Just remember to change out of your pyjamas before making that video call.</p>
 
                 <p>Another great piece of software is <a href="https://slack.com/" target="_blank" rel="noopener noreferrer">Slack</a>. It's an alternative to email, featuring instant messaging, file sharing, video calling and integration with other apps (Google Drive, <a href="https://www.office.com/" target="_blank" rel="noopener noreferrer">Office 365</a> and more). Slack is available both as an online and desktop tool.</p>
 
@@ -145,15 +148,22 @@ permalink: /6-tips-for-surviving-remote-working/
             </div>
         </div>
         <div class="contact section">
-                    <h3>Would You Like To Start A Project With Me?</h3>
-                    <p class="padding-bottom">Please click the contact button to get in touch with me about your requirements. 
-                            I look forward to hearing more about your exciting project.</p>
-                    <div class="center padding-bottom"><a class="btn-contact" href="https://us5.list-manage.com/contact-form?u=0faa041c3b4e79909716dd256&form_id=e1c8f76dbb1507fc5caa25324e7047dd" target="_blank">Contact Me</a></div>
+            <div class="container-1140">
+                <div class="row">
+                    <div class="col-8">
+                        <h3>Would You Like To Start A Project With Me?</h3>
+                        <p>Click the contact button to get in touch with your requirements</p>
+                    </div>
+                    <div class="col-4">
+                        <a class="btn-primary" href="https://us5.list-manage.com/contact-form?u=0faa041c3b4e79909716dd256&form_id=e1c8f76dbb1507fc5caa25324e7047dd" target="_blank">Contact Me</a>
+                    </div>
+                </div>
+                </div>
         </div>
         <div class="footer section">
-            <div class="container-1200">
+            <div class="container-1140">
                 <div class="row">
-                    <div class="col-2">
+                    <div class="col-3">
                         <h4>Links</h4>
                         <p><a href="/">Home</a></p>
                         <p><a href="https://sybiltec.com/about">About</a></p>
@@ -162,14 +172,7 @@ permalink: /6-tips-for-surviving-remote-working/
                         <p><a href="https://sybiltec.com/terms-and-conditions">Terms and Conditions</a></p>
                         <p><a href="https://sybiltec.com/uploads/privacy-policy-v3.pdf" target="_blank">Privacy Policy</a></p>
                     </div>
-                    <div class="col-2">
-                        <h4>Services</h4>
-                        <p>Shopify Sites</p>
-                        <p>WordPress Sites</p>
-                        <p>Wix Sites</p>
-                        <p>Squarespace Sites</p>
-                    </div>
-                    <div class="col-4">
+                    <div class="col-5">
                         <div class="ml-form-embed"
                             data-account="2216689:x9i7o3w7n4"
                             data-form="5270027:e5c2j0">
@@ -180,20 +183,17 @@ permalink: /6-tips-for-surviving-remote-working/
                         <p>
                             <a href="https://us5.list-manage.com/contact-form?u=0faa041c3b4e79909716dd256&form_id=e1c8f76dbb1507fc5caa25324e7047dd" target="_blank"><i class="far fa-envelope"></i></a>
                             <a href="https://linkedin.com/in/sybil-m" target="_blank" rel="noopener noreferrer">
-                                <i class="fab fa-linkedin-in"></i></a>
+                                <i class="fa-brands fa-linkedin"></i></a>
                             <a href="https://twitter.com/sybiltec" target="_blank" rel="noopener noreferrer">
-                                <i class="fab fa-twitter"></i></a>
+                                <i class="fa-brands fa-twitter"></i></a>
                             <a href="https://instagram.com/sybiltec" target="_blank" rel="noopener noreferrer">
-                                <i class="fab fa-instagram"></i></a>
-                        </p>
-                        <p><a href="https://shopify.co.uk" target="_blank" rel="noopener noreferrer">
-                            <img src="https://sybiltec.com/images/logos/shopify-partners-logo.png" alt="Shopify Partners logo"></a></p>
-                        <p><a href="https://partnernetwork.ionos.co.uk/partner/sybiltec?origin=PartnerBadge" rel="nofollow">
-<img src="https://images-2.partnerportal.ionos.co.uk/items/8c52de7e-fd6b-485c-b6f7-57e5b4fc1bf7/profiles/526e8e05-108f-4693-a1dd-2b415e4d7a54/badges/normal_white" alt="IONOS - Official Partner">
-</a></p>                        
+                                <i class="fa-brands fa-instagram"></i></a>
+			                <a href="https://facebook.com/sybiltec" target="_blank" rel="noopener noreferrer">
+                                <i class="fa-brands fa-facebook"></i></a>
+                        </p>                       
                     </div>
                 </div>
-                <div class="logo"><img src="https://sybiltec.com/images/logos/sybiltech-logo-transparent.png" alt="Sybiltech logo">
+                <div class="logo"><img src="https://sybiltec.com/images/logos/sybiltec-logo-transparent.png" alt="Sybiltech logo">
                     <p class="center"><a href="#">Back to top</a></p>
             </div>
             </div>
