--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -26,7 +26,7 @@ permalink: /terms-and-conditions/
             for SMEs in Shopify, Squarespace, WordPress and Wix. Read my terms and conditions here." />
         <meta property="og:url" content="https://sybiltec.com/terms-and-conditions/" />
         <meta property="og:site_name" content="Sybiltec" />
-        <meta property="og:image" content="https://sybiltec.com/images/logos/sybiltech-logo-social.png" />
+        <meta property="og:image" content="https://sybiltec.com/images/logos/sybiltec-logo-social.png" />
         <meta name="twitter:card" content="summary_large_image" />
         <meta name="twitter:creator" content="@sybiltec" />
         <meta name="twitter:site" content="@sybiltec" />
@@ -36,7 +36,7 @@ permalink: /terms-and-conditions/
         <meta name="twitter:data2" content="5 minutes">
         <meta name="google-site-verification" content="4CQdjA8VuHHdJlLAeL33JXUNCcg92x6Yy2MK2H-F5rs" />
         <link rel="canonical" href="https://sybiltec.com/terms-and-conditions/" />
-        <link rel="stylesheet" href="https://sybiltec.com/styles.min.css" type="text/css">
+        <link rel="stylesheet" href="https://sybiltec.com/styles.css" type="text/css">
         <link rel="icon" type="image/png" href="https://sybiltec.com/favicon.png">
         <!-- MailerLite Universal -->
         <script>
@@ -52,38 +52,41 @@ permalink: /terms-and-conditions/
     </head>
     <body>
         <div class="header">
-            <div class="container-1000">
-                <div class="logo">
-                    <a href="/"><img src="https://sybiltec.com/images/logos/sybiltech-logo-small.jpg" alt="Sybiltech logo"></a>
-                </div>
-            </div>
-        </div>
-        <div class="nav">
-            <div class="container-1000 center">
-                <div class="topnav" id="myTopnav">
-                    <a href="/">Home</a>                    
-                    <a href="https://sybiltec.com/services">Services</a>
-                    <a href="https://sybiltec.com/clients">Clients</a>
-                    <a href="https://sybiltec.com/design">Design</a>
-                    <a href="https://sybiltec.com/about">About Me</a>
-                    <a href="https://sybiltec.com/projects">Projects</a>   
-                    <a href="https://sybiltec.com/faqs">FAQs</a>
-                    <a href="https://sybiltec.com/blog">Blog</a>
-                    <a href="https://us5.list-manage.com/contact-form?u=0faa041c3b4e79909716dd256&form_id=e1c8f76dbb1507fc5caa25324e7047dd" target="_blank">Contact</a>
-                    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-                        <i class="fa fa-bars"></i>
-                    </a>
+                <div class="container-1140">
+                    <div class="row">
+                        <div class="col-2">
+                            <div class="logo">
+                                <a href="/"><img src="https://sybiltec.com/images/logos/sybiltec-logo-small.png" alt="Sybiltec"></a>
+                            </div>
+                        </div>
+                        <div class="col-10">
+                            <div class="nav">
+                                    <div class="topnav" id="myTopnav">
+                                        <a href="https://sybiltec.com/services">Services</a>
+                                        <a href="https://sybiltec.com/clients">Clients</a>
+                                        <a href="https://sybiltec.com/design">Design</a>
+                                        <a href="https://sybiltec.com/about">About Me</a>
+                                        <a href="https://sybiltec.com/projects">Projects</a>   
+                                        <a href="https://sybiltec.com/faqs">FAQs</a>
+                                        <a href="https://sybiltec.com/blog">Blog</a>
+                                        <a href="https://us5.list-manage.com/contact-form?u=0faa041c3b4e79909716dd256&form_id=e1c8f76dbb1507fc5caa25324e7047dd" target="_blank">Contact</a>
+                                        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                                            <i class="fas fa-bars"></i>
+                                        </a>
+                                    </div>
+                            </div>
+                        </div>
                 </div>
             </div>
         </div>
         <div class="hero center">
-            <div class="container-1000">
+            <div class="container-1140">
                 <h1>Terms and Conditions</h1>
                 <h4></h4>                
             </div>
         </div>
         <div class="main section">
-            <div class="container-1000">
+            <div class="container-1140">
                 <h2>Terms and Conditions</h2>
                 <p>These terms and conditions are the contract between you and Sybil Mayard trading as Sybiltec ("us", "we", etc). By visiting or using Our Website, you agree to be bound by them.</p>
 
@@ -152,7 +155,7 @@ permalink: /terms-and-conditions/
 
                 <h3>5. Miscellaneous matters</h3>
                 <p>
-                    5.1. Our privacy policy is strong and precise. It complies fully with the Data Protection Act 2018 which is at <a href="https://sybiltec.com/uploads/privacy-policy-v3.pdf" target="_blank">https://sybiltec.com/uploads/privacy-policy-v3.pdf" target="_blank</a>.<br>
+                    5.1. Our privacy policy is strong and precise. It complies fully with the Data Protection Act 2018 which is located <a href="https://sybiltec.com/uploads/privacy-policy-v3.pdf" target="_blank">here</a>.<br>
                     5.2. If any term or provision of this agreement is at any time held by any jurisdiction to be void, invalid or unenforceable, then it shall be treated as changed or reduced, only to the extent minimally necessary to bring it within the laws of that jurisdiction and to prevent it from being void and it shall be binding in that changed or reduced form. Subject to that, each provision shall be interpreted as severable and shall not in any way affect any other of these terms.<br>
                     5.3. No failure or delay by any party to exercise any right, power or remedy will operate as a waiver of it nor indicate any intention to reduce that or any other right in the future.<br>
                     5.4. Any communication to be served on either party by the other shall be delivered by hand or sent by first class post or by e-mail.<br>
@@ -165,15 +168,22 @@ permalink: /terms-and-conditions/
             </div>
         </div>
         <div class="contact section">
-                    <h3>Would You Like To Start A Project With Me?</h3>
-                    <p class="padding-bottom">Please click the contact button to get in touch with me about your requirements. 
-                            I look forward to hearing more about your exciting project.</p>
-                    <div class="center padding-bottom"><a class="btn-contact" href="https://us5.list-manage.com/contact-form?u=0faa041c3b4e79909716dd256&form_id=e1c8f76dbb1507fc5caa25324e7047dd" target="_blank">Contact Me</a></div>
+            <div class="container-1140">
+                <div class="row">
+                    <div class="col-8">
+                        <h3>Would You Like To Start A Project With Me?</h3>
+                        <p>Click the contact button to get in touch with your requirements</p>
+                    </div>
+                    <div class="col-4">
+                        <a class="btn-primary" href="https://us5.list-manage.com/contact-form?u=0faa041c3b4e79909716dd256&form_id=e1c8f76dbb1507fc5caa25324e7047dd" target="_blank">Contact Me</a>
+                    </div>
+                </div>
+                </div>
         </div>
         <div class="footer section">
-            <div class="container-1200">
+            <div class="container-1140">
                 <div class="row">
-                    <div class="col-2">
+                    <div class="col-3">
                         <h4>Links</h4>
                         <p><a href="/">Home</a></p>
                         <p><a href="https://sybiltec.com/about">About</a></p>
@@ -182,14 +192,7 @@ permalink: /terms-and-conditions/
                         <p><a href="https://sybiltec.com/terms-and-conditions">Terms and Conditions</a></p>
                         <p><a href="https://sybiltec.com/uploads/privacy-policy-v3.pdf" target="_blank">Privacy Policy</a></p>
                     </div>
-                    <div class="col-2">
-                        <h4>Services</h4>
-                        <p>Shopify Sites</p>
-                        <p>WordPress Sites</p>
-                        <p>Wix Sites</p>
-                        <p>Squarespace Sites</p>
-                    </div>
-                    <div class="col-4">
+                    <div class="col-5">
                         <div class="ml-form-embed"
                             data-account="2216689:x9i7o3w7n4"
                             data-form="5270027:e5c2j0">
@@ -200,20 +203,17 @@ permalink: /terms-and-conditions/
                         <p>
                             <a href="https://us5.list-manage.com/contact-form?u=0faa041c3b4e79909716dd256&form_id=e1c8f76dbb1507fc5caa25324e7047dd" target="_blank"><i class="far fa-envelope"></i></a>
                             <a href="https://linkedin.com/in/sybil-m" target="_blank" rel="noopener noreferrer">
-                                <i class="fab fa-linkedin-in"></i></a>
+                                <i class="fa-brands fa-linkedin"></i></a>
                             <a href="https://twitter.com/sybiltec" target="_blank" rel="noopener noreferrer">
-                                <i class="fab fa-twitter"></i></a>
+                                <i class="fa-brands fa-twitter"></i></a>
                             <a href="https://instagram.com/sybiltec" target="_blank" rel="noopener noreferrer">
-                                <i class="fab fa-instagram"></i></a>
-                        </p>
-                        <p><a href="https://shopify.co.uk" target="_blank" rel="noopener noreferrer">
-                            <img src="https://sybiltec.com/images/logos/shopify-partners-logo.png" alt="Shopify Partners logo"></a></p>
-                        <p><a href="https://partnernetwork.ionos.co.uk/partner/sybiltec?origin=PartnerBadge" rel="nofollow">
-<img src="https://images-2.partnerportal.ionos.co.uk/items/8c52de7e-fd6b-485c-b6f7-57e5b4fc1bf7/profiles/526e8e05-108f-4693-a1dd-2b415e4d7a54/badges/normal_white" alt="IONOS - Official Partner">
-</a></p>                        
+                                <i class="fa-brands fa-instagram"></i></a>
+			                <a href="https://facebook.com/sybiltec" target="_blank" rel="noopener noreferrer">
+                                <i class="fa-brands fa-facebook"></i></a>
+                        </p>                       
                     </div>
                 </div>
-                <div class="logo"><img src="https://sybiltec.com/images/logos/sybiltech-logo-transparent.png" alt="Sybiltech logo">
+                <div class="logo"><img src="https://sybiltec.com/images/logos/sybiltec-logo-transparent.png" alt="Sybiltech logo">
                     <p class="center"><a href="#">Back to top</a></p>
             </div>
             </div>
